--- a/app/views/apartments/_apartment.html.erb
+++ b/app/views/apartments/_apartment.html.erb
@@ -14,4 +14,11 @@
     <%= apartment.building.direccion %>
   </p>
 
+  <p>
+    <strong>Imágenes:</strong>
+    <% apartment.images.each do |image| %>
+      <%= image_tag image, class:"w-50" %>
+    <% end %>
+  </p>
+
 </div>
