--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -4,11 +4,16 @@
 
 <h1 class="text-center my-5">Listado Departamentos</h1>
 
-<% if !current_user.usuario? %>
-  <div class="mb-5 d-flex justify-content-end">
-    <%= link_to "Crear Departamento", new_apartment_path, class:"btn btn-primary" %>
+<div class="row justify-content-between">
+  <div class="col">
+    Contamos con un total de <%= @total_departamentos %> departamentos
   </div>
-<% end %>
+  <% if !current_user.usuario? %>
+    <div class="col mb-5 text-end">
+      <%= link_to "Crear Departamento", new_apartment_path, class:"btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
 
 <table class="table table-striped mb-5">
   <thead>
@@ -28,6 +33,11 @@
     <% end %>
   </tbody>
 </table>
+
+<div class="my-5 d-flex justify-content-end">
+  <%== pagy_bootstrap_nav(@pagy) %>
+</div>
+
 
 <% if !current_user.usuario? %>
   <div>
